Flava Flav text (home page)

--- a/fluffyUnicorns/fluffyUnicorns/Views/Home/Index.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Fluffy Unicorns is where it's at, bitch";
 }
 @section featured {
     <section class="featured">
@@ -9,37 +9,26 @@
                 <h2>@ViewBag.Message</h2>
             </hgroup>
             <p>
-                To learn more about ASP.NET MVC visit
-                <a href="http://asp.net/mvc" title="ASP.NET MVC Website">http://asp.net/mvc</a>.
-                The page features <mark>videos, tutorials, and samples</mark> to help you get the most from ASP.NET MVC.
-                If you have any questions about ASP.NET MVC visit
-                <a href="http://forums.asp.net/1146.aspx/1?MVC" title="ASP.NET MVC Forum">our forums</a>.
+                Welcome to Fluffy Unicorns!
             </p>
         </div>
     </section>
 }
-<h3>We suggest the following:</h3>
+<h3>Fluffy Unicorn Characteristics</h3>
 <ol class="round">
     <li class="one">
-        <h5>Getting Started</h5>
-        ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-        enables a clean separation of concerns and that gives you full control over markup
-        for enjoyable, agile development. ASP.NET MVC includes many features that enable
-        fast, TDD-friendly development for creating sophisticated applications that use
-        the latest web standards.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245151">Learn more…</a>
+        <h5>The BIG horn</h5>
+        The first step to identifying a fluffy unicorn, is to spot the horn; this should be easy, just remember the 3 H's:
+        HUGE, HARD, and HORN.  Also they are LONG and POINTY.
     </li>
 
     <li class="two">
-        <h5>Add NuGet packages and jump-start your coding</h5>
-        NuGet makes it easy to install and update free libraries and tools.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245153">Learn more…</a>
+        <h5>The FLUFFY</h5>
+        Many people believe that fluffy unicorns are just a myth; that only short haired unicorns exist; these people are fools and drunks.  The rarest, and most beautiful unicorn is the fluffy unicorn.  They have to get haircuts at special unicorn solons or else their fluff becomes tangled and scraggaly, and also will hinder their eye-sight.
     </li>
 
     <li class="three">
-        <h5>Find Web Hosting</h5>
-        You can easily find a web hosting company that offers the right mix of features
-        and price for your applications.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245157">Learn more…</a>
+        <h5>Eye Sight</h5>
+        Speaking of eye sight.. they have terrible eye sight.  It is not uncommon for a fluffy unicorn to walk into immobile objects.  So if you see one, it might not see you. Be Careful!
     </li>
 </ol>
