--- a/fluffyUnicorns/fluffyUnicorns/Views/Home/Index.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
         </div>
     </section>
 }
-<h3>Fluffy Unicorn Characteristics</h3>
+<h3>How to Identify a Fluffy Unicorn</h3>
 <ol class="round">
     <li class="one">
         <h5>The BIG horn</h5>
