Getting familiar where different things in MVC are

--- a/fluffyUnicorns/fluffyUnicorns/Views/Home/About.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/Home/About.cshtml
@@ -9,15 +9,15 @@
 
 <article>
     <p>
-        Use this area to provide additional information.
+        Fluffy Unicorns
     </p>
 
     <p>
-        Use this area to provide additional information.
+        Here to save the day
     </p>
 
     <p>
-        Use this area to provide additional information.
+        Unless there is nothing to save, then they will just stand there and look pretty. 
     </p>
 </article>
 
