--- a/fluffyUnicorns/fluffyUnicorns/Views/Home/Contact.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/Home/Contact.cshtml
@@ -12,13 +12,10 @@
         <h3>Phone</h3>
     </header>
     <p>
-        <span class="label">Main:</span>
+        <span class="label">You can reach the 'corns at:</span>
         <span>425.555.0100</span>
     </p>
-    <p>
-        <span class="label">After Hours:</span>
-        <span>425.555.0199</span>
-    </p>
+ 
 </section>
 
 <section class="contact">
@@ -27,15 +24,15 @@
     </header>
     <p>
         <span class="label">Support:</span>
-        <span><a href="mailto:Support@example.com">Support@example.com</a></span>
+        <span><a href="#">corns@fluffy.com</a></span>
     </p>
     <p>
         <span class="label">Marketing:</span>
-        <span><a href="mailto:Marketing@example.com">Marketing@example.com</a></span>
+        <span><a href="#">theFluff@fluffy.com</a></span>
     </p>
     <p>
         <span class="label">General:</span>
-        <span><a href="mailto:General@example.com">General@example.com</a></span>
+        <span><a href="#">FluffyUnicorns@fluffy.com</a></span>
     </p>
 </section>
 
@@ -44,7 +41,7 @@
         <h3>Address</h3>
     </header>
     <p>
-        One Microsoft Way<br />
-        Redmond, WA 98052-6399
+       55 Fluffy Road<br />
+        Space, WA 98052-6399
     </p>
 </section>
