--- a/fluffyUnicorns/fluffyUnicorns/Views/Home/About.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/Home/About.cshtml
@@ -29,6 +29,7 @@
     <ul>
         <li>@Html.ActionLink("Home", "Index", "Home")</li>
         <li>@Html.ActionLink("About", "About", "Home")</li>
+         <li>@Html.ActionLink("BookMarks", "BookMarks", "Home")</li>
         <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
     </ul>
 </aside>
