Began styling template

--- a/fluffyUnicorns/fluffyUnicorns/Views/Home/Index.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "Fluffy Unicorns is where it's at, bitch";
 }
-@section featured {
+@*@section featured {*@
     <section class="featured">
         <div class="content-wrapper">
             <hgroup class="title">
@@ -13,7 +13,7 @@
             </p>
         </div>
     </section>
-}
+@*}*@
 <h3>How to Identify a Fluffy Unicorn</h3>
 <ol class="round">
     <li class="one">
