--- a/fluffyUnicorns/fluffyUnicorns/Views/Shared/_Layout.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     </head>
     <body>
         
-
+<div id="wrapper">
             <header>  
                 <div class="fixed">
                 <nav class="top-bar" data-topbar>
@@ -35,12 +35,13 @@
             </header>
 
             
-<div id="wrapper">
+
 
             <section id="content">
             <div class="content">
                 <div class="background">
                         @RenderBody()
+                        <p>Test</p>
                 </div>
             </div>
             </section>
