made bookmark folder
got rid of BookMarks.cshtml test file, linked Home to new bookmarks page

--- a/fluffyUnicorns/fluffyUnicorns/Views/Shared/_Layout.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                 <nav class="top-bar" data-topbar>
                     <section class="top-bar-section">
                     <ul class="right">
-                        <li>@Html.ActionLink("My Cloud Markers", "Bookmarks")</li>
+                        <li>@Html.ActionLink("bookmark","My Cloud Markers", "bookmark")</li>
                         <li><a href="#">Stats</a></li>
                         <li>@Html.ActionLink("About", "About")</li>
                         <li>@Html.ActionLink("Contact", "Contact")</li>
