--- a/fluffyUnicorns/fluffyUnicorns/Content/Site.css
+++ b/fluffyUnicorns/fluffyUnicorns/Content/Site.css
@@ -34,11 +34,11 @@ div.content {
 }*/
 
 .featured, body, nav {
-    /*overflow:hidden;*/
+    overflow:hidden;
 }
 
 #wrapper {
-    overflow:hidden;
+    /*overflow:hidden;*/
 }
 
 footer li {
@@ -48,8 +48,7 @@ footer li {
 footer {
     bottom:0px;
     left:0px;
-    background-color:white;
-    z-index:1;
+    /*background-color:white;*/
     width:100%;
 
 }
