--- a/fluffyUnicorns/fluffyUnicorns/Views/Home/Index.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Fluffy Unicorns is where it's at, bitch";
+    ViewBag.Title = "Fluffy Unicorns is where it's at";
 }
 @*@section featured {*@
     <section class="featured">
