--- a/fluffyUnicorns/fluffyUnicorns/Views/Shared/_Layout.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
         
 <div id="wrapper">
             <header>  
-                <div class="fixed">
+                @*<div class="fixed">*@
                 <nav class="top-bar" data-topbar>
                     <section class="top-bar-section">
                     <ul class="right">
@@ -29,7 +29,7 @@
                     </ul>
                     </section>
                 </nav>
-                </div>
+                @*</div>*@
 
                 <a href='@Url.Action("Index")'><img id="logo" src="~/Images/logo-orange.png" /></a>
             </header>
