--- a/fluffyUnicorns/fluffyUnicorns/Views/bookmark/Delete.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/bookmark/Delete.cshtml
@@ -1,12 +1,11 @@
 ﻿@model fluffyUnicorns.Models.bookmark
 @{
-    ViewBag.Title = "Add Your Bookmarks!";
+    ViewBag.Title = "Delete Your Bookmarks!";
 }
 
-<h2>Create</h2>
-
-@using (Html.BeginForm("Create", "bookmark", FormMethod.Post, new 
-                                       { enctype = "multipart/form-data" })) {
+<h2>Delete</h2>
+<h3>Are you sure you want to delete this?</h3>
+@using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
@@ -36,20 +35,10 @@
             @Html.EditorFor(model => model.description)
             @Html.ValidationMessageFor(model => model.description)
         </div>
-       
-    
-        @Html.LabelFor(model => model.filePath)
-         @Html.TextBoxFor(model => model.filePath, new { type = "file" })
-       @* <input type="file" id="filePath" name="filePath" />*@
-        <input type="submit" value="upload" />
-        
-@*       @if(!String.IsNullOrEmpty(ViewBag.Status))
-       {
-           <div>
 
-               @ViewBag.Status 
-           </div>
-       }*@
+        <p>
+            <input type="submit" value="Delete" />
+        </p>
     </fieldset>
 }
 
