--- a/fluffyUnicorns/fluffyUnicorns/Views/Shared/_Layout.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>@ViewBag.Name Cloud Marker</title>
-        <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+        <link href="Images/favicon.ico" rel="shortcut icon" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="~/Content/foundation.css" rel="stylesheet" />   
         <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900|Concert+One|The+Girl+Next+Door|Patrick+Hand+SC|Londrina+Shadow' rel='stylesheet' type='text/css'>
