--- a/fluffyUnicorns/fluffyUnicorns/Views/bookmark/Create.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/bookmark/Create.cshtml
@@ -5,8 +5,9 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm("Create", "bookmark", FormMethod.Post, new 
-                                       { enctype = "multipart/form-data" })) {
+@using (Html.BeginForm("Create", "bookmark", FormMethod.Post, new { enctype = "multipart/form-data" })) 
+
+{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
