--- a/fluffyUnicorns/fluffyUnicorns/Views/Home/Index.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/Home/Index.cshtml
@@ -1,34 +1,17 @@
 ﻿@{
-    ViewBag.Title = "Fluffy Unicorns is where it's at";
-}
-@*@section featured {*@
-    <section class="featured">
-        <div class="content-wrapper">
-            <hgroup class="title">
-                <h1>@ViewBag.Title.</h1>
-                <h2>@ViewBag.Message</h2>
-            </hgroup>
-            <p>
-                Welcome to Fluffy Unicorns!
-            </p>
-        </div>
-    </section>
-@*}*@
-<h3>How to Identify a Fluffy Unicorn</h3>
-<ol class="round">
-    <li class="one">
-        <h5>The BIG horn</h5>
-        The first step to identifying a fluffy unicorn, is to spot the horn; this should be easy, just remember the 3 H's:
-        HUGE, HARD, and HORN.  Also they are LONG and POINTY.
-    </li>
+    ViewBag.Title = "Hooray, you're here!";
+}          
+   
+<div class="home">
+    <h1>@ViewBag.Title</h1>
+    <br />
+    <h4>Welcome to Cloud Marker, your new best friend.  On Cloud Marker, you can upload your bookmarks from your favourite browser so you can access them in a snap from any device, anywhere, anytime!  Once your bookmarks are uploaded to your account, you can blah blah blah blah blah blah blah.</h4>
+    <br />
+    <h3>It's that simple!</h3>
+    <br />
+    <br />
+    <a class="register" href="#">Sign Up Now!</a>
+    <br />
+    <a class="login" href="#">Login</a>
 
-    <li class="two">
-        <h5>The FLUFFY</h5>
-        Many people believe that fluffy unicorns are just a myth; that only short haired unicorns exist; these people are fools and drunks.  The rarest, and most beautiful unicorn is the fluffy unicorn.  They have to get haircuts at special unicorn solons or else their fluff becomes tangled and scraggaly, and also will hinder their eye-sight.
-    </li>
-
-    <li class="three">
-        <h5>Eye Sight</h5>
-        Speaking of eye sight.. they have terrible eye sight.  It is not uncommon for a fluffy unicorn to walk into immobile objects.  So if you see one, it might not see you. Be Careful!
-    </li>
-</ol>
+</div>
