--- a/fluffyUnicorns/fluffyUnicorns/Views/Shared/_Layout.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/Shared/_Layout.cshtml
@@ -8,8 +8,12 @@
         <link href="~/Content/foundation.css" rel="stylesheet" />   
         <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900|Concert+One|The+Girl+Next+Door|Patrick+Hand+SC|Londrina+Shadow' rel='stylesheet' type='text/css'>
         @Styles.Render("~/Content/css")
+        <link href="~/Content/jquery.bxslider.css" rel="stylesheet" />
         @Scripts.Render("~/bundles/jquery")
         @Scripts.Render("~/bundles/modernizr")
+        <script src="~/Scripts/plugins/jquery.easing.1.3.js"></script>
+        <script src="~/Scripts/jquery.bxslider.min.js"></script>
+        
     </head>
     <body>
         
