--- a/fluffyUnicorns/fluffyUnicorns/Views/Home/About.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/Home/About.cshtml
@@ -1,35 +1,14 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "About Cloud Marker";
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-    <h2>@ViewBag.Message</h2>
-</hgroup>
+<div class="about">
+    <h2>@ViewBag.Title</h2>
 
-<article>
-    <p>
-        Fluffy Unicorns
-    </p>
+    <p>Fire can be our friend; whether it's toasting marshmallows or raining down on Charlie. Our differences are only skin deep, but our sames go down to the bone. Facts are meaningless. You could use facts to prove anything that's even remotely true! Attempted murder? Now honestly, what is that? Do they give a Nobel Prize for attempted chemistry?</p>
+    <h5>Natural Born Kissers</h5>
+    <p>Bart, with $10,000 we'd be millionaires! We could buy all kinds of useful things like&hellip;love! What good is money if it can't inspire terror in your fellow man? Bart, with $10,000 we'd be millionaires! We could buy all kinds of useful things like&hellip;love!</p>
 
-    <p>
-        Here to save the day
-    </p>
+</div>
 
-    <p>
-        Unless there is nothing to save, then they will just stand there and look pretty. 
-    </p>
-</article>
 
-<aside>
-    <h3>Aside Title</h3>
-    <p>
-        Use this area to provide additional information.
-    </p>
-    <ul>
-        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-        <li>@Html.ActionLink("About", "About", "Home")</li>
-         <li>@Html.ActionLink("BookMarks", "BookMarks", "Home")</li>
-        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-    </ul>
-</aside>
