--- a/fluffyUnicorns/fluffyUnicorns/Views/bookmark/Index.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/bookmark/Index.cshtml
@@ -3,15 +3,17 @@
 @{ViewBag.Title = "Index";}
 
 <h2>My Cloud Markers</h2>
-
-  @Html.ActionLink("Add a Bookmark", "Create")
-&nbsp;&nbsp;&nbsp;
-  @Html.ActionLink("Edit Bookmarks", "Edit")
+<div class="addedit">
+    @Html.ActionLink("Add a Bookmark", "Create")
+    &nbsp;&nbsp;&nbsp;
+    @Html.ActionLink("Edit Bookmarks", "Edit")
+</div>
+<br />
 <br />
 
 <div class="large-8 medium-12 small-12 columns">
 
-    <label for="sort">Sort by: 
+    <label for="sort">Sort bookmarks by: 
 <select id="sort">
     <option>Date</option>
     <option>Name</option>
@@ -24,7 +26,7 @@
 </p>*@
 
 @*@Html.DisplayNameFor(model => model.browserName)*@
-<br />
+
 <br />
 @foreach (var item in Model)
 {
@@ -50,7 +52,7 @@
             <li><a href="#">Science (7)</a></li>
             <li><a href="#">Weather (5)</a></li>
         </ul>
-        <input type="search" placeholder="Search..." />
+        <input type="search" id="search" placeholder="Search..." />
     </div>
 </div>
 
