--- a/fluffyUnicorns/fluffyUnicorns/Views/Home/Contact.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/Home/Contact.cshtml
@@ -14,7 +14,7 @@
     </form>
        
         <ul class="bxslider">
-            <li><a href="http://www.google.com" target="_blank"><img src="~/Images/cat1.jpg" title="Burrito Cat" /></a></li>
+            <li><a href="http://www.google.com" target="_blank"><img src="~/Images/cat1.jpg" title="Burrito cat" /></a></li>
             <li><a href="http://twitter.com" target="_blank"><img src="~/Images/cat2.jpg" title="Fuck you, cat" /></a></li>
             <li><a href="http://wikipedia.com" target="_blank"><img src="~/Images/cat3.jpg" title="Grape loving cat" /></a></li>
         </ul>
