Added a bread cat. Because.

--- a/fluffyUnicorns/fluffyUnicorns/Views/Home/Contact.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/Home/Contact.cshtml
@@ -17,6 +17,7 @@
             <li><a href="http://www.google.com" target="_blank"><img src="~/Images/cat1.jpg" title="Burrito cat" /></a></li>
             <li><a href="http://twitter.com" target="_blank"><img src="~/Images/cat2.jpg" title="Fuck you, cat" /></a></li>
             <li><a href="http://wikipedia.com" target="_blank"><img src="~/Images/cat3.jpg" title="Grape loving cat" /></a></li>
+            <li><a href="http://yahoo.com" target="_blank"><img src="~/Images/cat4.gif" title="Do you know the marvellous bread cat?" /></a></li>
         </ul>
 
     <script>
@@ -30,7 +31,8 @@
                 useCSS: false,
                 infiniteLoop: true,
                 easing: 'easeOutElastic',
-                speed: 1500
+                speed: 1500,
+                adaptiveHeight: true
             });
         });
 
