Added content, styled account pages

--- a/fluffyUnicorns/fluffyUnicorns/Content/Site.css
+++ b/fluffyUnicorns/fluffyUnicorns/Content/Site.css
@@ -1,7 +1,7 @@
 ﻿p {
     color:#2f2f2f;
     font-family: 'Lato', sans-serif;
-    font-weight:400;
+    font-weight:600;
     font-size:18px;
 }
 
@@ -20,7 +20,6 @@ a, a:hover, a:visited {
     background-color:#286bee;
     background-attachment:fixed;
     /*min-height:955px;*/
-    /*border:1px solid black;*/
     margin:0 auto;
     overflow-x:hidden;
 }
@@ -38,7 +37,7 @@ a, a:hover, a:visited {
     margin-bottom:10%;
     margin-top:3%;
     padding:10px;
-    /*background:url('/Images/trans.png') repeat center top;*/
+    background:url('/Images/trans.png') repeat center top;
     border-radius:12px;
 }
 
@@ -67,7 +66,7 @@ footer {
 /*--------PAGES----------*/
 
 /*Markers*/
-.addedit a, .addedit a:hover, .addedit a:visited {
+.addedit a, .addedit a:hover, .addedit a:visited, .button {
     color:white;
     background-color:#ff9400;
     border:1px solid white;
@@ -155,5 +154,18 @@ input, select {
     margin-top:35px;
     text-decoration:underline;
     font-size:larger;
+}
+
+label {
+    color:#ff9400;
+    font-weight:bold;
+}
+
+.account {
+    list-style:none;
+}
+
+#RememberMe, label#RememberMe {
+    display:inline;
 }
 
