--- a/fluffyUnicorns/fluffyUnicorns/Views/Home/About.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/Home/About.cshtml
@@ -5,10 +5,9 @@
 <div class="about">
     <h2>@ViewBag.Title</h2>
 
-    <p>Fire can be our friend; whether it's toasting marshmallows or raining down on Charlie. Our differences are only skin deep, but our sames go down to the bone. Facts are meaningless. You could use facts to prove anything that's even remotely true! Attempted murder? Now honestly, what is that? Do they give a Nobel Prize for attempted chemistry?</p>
-    <h5>Natural Born Kissers</h5>
-    <p>Bart, with $10,000 we'd be millionaires! We could buy all kinds of useful things like&hellip;love! What good is money if it can't inspire terror in your fellow man? Bart, with $10,000 we'd be millionaires! We could buy all kinds of useful things like&hellip;love!</p>
-
+    <p>
+        Cloud Marker is a project by students Danielle Stirling and Stacey Masson of Humber College's Web Development Program.
+    </p>
 </div>
 
 
