--- a/fluffyUnicorns/fluffyUnicorns/Views/Account/Login.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/Account/Login.cshtml
@@ -1,22 +1,19 @@
 ﻿@model fluffyUnicorns.Models.LoginModel
 
 @{
-    ViewBag.Title = "Log in";
+    ViewBag.Title = "Log In";
 }
 
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
+    <h2>@ViewBag.Title</h2>
 </hgroup>
 
 <section id="loginForm">
-<h2>Use a local account to log in.</h2>
 @using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl })) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
-    <fieldset>
-        <legend>Log in Form</legend>
-        <ol>
+        <ul class="account">
             <li>
                 @Html.LabelFor(m => m.UserName)
                 @Html.TextBoxFor(m => m.UserName)
@@ -28,21 +25,15 @@
                 @Html.ValidationMessageFor(m => m.Password)
             </li>
             <li>
-                @Html.CheckBoxFor(m => m.RememberMe)
                 @Html.LabelFor(m => m.RememberMe, new { @class = "checkbox" })
+                @Html.CheckBoxFor(m => m.RememberMe)
             </li>
-        </ol>
-        <input type="submit" value="Log in" />
-    </fieldset>
+        </ul>
+        <input type="submit" value="Log in" class="button" />
     <p>
         @Html.ActionLink("Register", "Register") if you don't have an account.
     </p>
 }
-</section>
-
-<section class="social" id="socialLoginForm">
-    <h2>Use another service to log in.</h2>
-    @Html.Action("ExternalLoginsList", new { ReturnUrl = ViewBag.ReturnUrl })
 </section>
 
 @section Scripts {
