--- a/fluffyUnicorns/fluffyUnicorns/Views/Account/Register.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/Account/Register.cshtml
@@ -1,20 +1,18 @@
 ﻿@model fluffyUnicorns.Models.RegisterModel
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Create Your Cloud Marker Account";
 }
 
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-    <h2>Create a new account.</h2>
+    <h2>@ViewBag.Title</h2>
+    <p>Create an account with Cloud Marker today to store your browser bookmarks in the cloud for easy access.</p>
 </hgroup>
 
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
 
-    <fieldset>
-        <legend>Registration Form</legend>
-        <ol>
+         <ul class="account">
             <li>
                 @Html.LabelFor(m => m.UserName)
                 @Html.TextBoxFor(m => m.UserName)
@@ -27,9 +25,8 @@
                 @Html.LabelFor(m => m.ConfirmPassword)
                 @Html.PasswordFor(m => m.ConfirmPassword)
             </li>
-        </ol>
-        <input type="submit" value="Register" />
-    </fieldset>
+        </ul>
+        <input type="submit" value="Register" class="button" />
 }
 
 @section Scripts {
