--- a/fluffyUnicorns/fluffyUnicorns/Views/Shared/_Layout.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/Shared/_Layout.cshtml
@@ -56,8 +56,8 @@
                 <nav class="footer">
                         <div class="large-6 medium-6 small-12 columns fnav">
                         @Html.ActionLink("Help", "Help", "Home")
-                        @Html.ActionLink("Privacy", "Privacy", "Home")
-                        @Html.ActionLink("Terms", "Terms", "Home")
+                        @Html.ActionLink("Privacy Policy", "Privacy", "Home")
+                        @Html.ActionLink("Terms of Use", "Terms", "Home")
                         @Html.ActionLink("Logout", "Logout")
                         </div>
                         <div class="large-6 medium-6 small-12 columns social">
